@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.442 2006/12/06 09:46:03 magnus Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.443 2006/12/11 14:15:59 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -344,6 +344,9 @@ MH/01 local_scan ABI version incremented to 1.1. It should have been updated
       long ago, but noone interested enough thought of it. Let's just say that
       the "1.1" means that there are some new functions that weren't there at
       some point in the past.
+
+PH/51 Error processing for expansion failure of helo_data from an smtp
+      transport during callout processing was broken.
 
 
 Exim version 4.63
